--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ set(SRC_FILES
     ${SRC_DIR}/WithTextButton.cpp
     ${SRC_DIR}/Event.cpp
     ${SRC_DIR}/InputBox.cpp
+    ${SRC_DIR}/Character.cpp
 )
 set(INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
 set(INCLUDE_FILES
@@ -99,6 +100,7 @@ set(INCLUDE_FILES
     ${INCLUDE_DIR}/Event.hpp
     ${INCLUDE_DIR}/WithTextButton.hpp
     ${INCLUDE_DIR}/InputBox.hpp
+    ${INCLUDE_DIR}/Character.hpp
     ${INCLUDE_DIR}/config.hpp
 
 )
